<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">LISTEN.moe</string>
    <string name="asset_statements" translatable="false">
    [{
        \"include\": \"https://listen.moe/.well-known/assetlinks.json\"
    }]
    </string>


    <!-- == Generic strings == -->

    <string name="submit">Submit</string>
    <string name="error">An error occurred</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>


    <!-- == Actions (notification, dialogs) == -->

    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_stop">Stop</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_unfavorite">Unfavorite</string>
    <string name="action_request">Request</string>
    <string name="action_undo">Undo</string>


    <!-- == Google Cast == -->

    <string name="media_route_menu_title" translatable="false">Cast</string>


    <!-- == Library modes == -->

    <string name="action_library">Library mode</string>
    <string name="jpop">J-pop</string>
    <string name="kpop">K-pop</string>


    <!-- == Sleep timer == -->

    <string name="sleep_timer">Sleep timer</string>
    <string name="set">Set</string>
    <string name="close">Close</string>
    <string name="cancel_timer">Cancel timer</string>
    <string name="sleep_timer_canceled">Cancelled timer</string>


    <!-- == Search == -->

    <string name="search">Search</string>
    <string name="clear_query">Clear query</string>
    <!-- e.g. No results for "user's search query" -->
    <string name="no_results">No results for \"%s\"</string>


    <!-- == Sort == -->

    <string name="sort">Sort</string>
    <string name="sort_title">Title</string>
    <string name="sort_artist">Artist</string>
    <string name="sort_desc">Descending</string>


    <!-- == Auth == -->

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username_or_email">Username / email address</string>
    <string name="username">Username</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="mfa_prompt">Enter the security code generated by your authenticator app.</string>
    <string name="mfa_hint">6-digit security code</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="logged_out">Logged out</string>
    <string name="login_required">Log in to use this feature.</string>
    <string name="required">Required</string>
    <string name="password_mismatch">Passwords don\'t match</string>


    <!-- == Radio tab == -->

    <string name="play_pause">Play/pause</string>
    <string name="last_played">Last played</string>
    <string name="favorite">Favorite</string>
    <!-- e.g. Requested by: username -->
    <string name="requested_by">Requested by: %s</string>


    <!-- == User tab == -->

    <string name="no_favorites">No favorites yet</string>
    <string name="filter_favorites">Filter favorites</string>
    <!-- e.g. Unfavorited song title -->
    <string name="unfavorited">Unfavorited %s</string>
    <!-- e.g. 2 in queue, 10 before yours -->
    <string name="queue_info">%d in queue, %d before yours</string>
    <string name="random_request">Request random song</string>
    <string name="all_cooldown">All songs are on cool down</string>


    <!-- == Song item actions == -->

    <!-- Requested song title -->
    <string name="requested_song">Requested %s</string>
    <string name="requested_random_song">Requested a random song</string>
    <string name="supporter_required">Supporter status required</string>


    <!-- == Song details == -->

    <string name="song_title">Title</string>
    <string name="song_album">Album</string>
    <string name="song_artist">Artist</string>
    <string name="song_source">Source</string>
    <string name="song_duration">Duration</string>
    <string name="song_release_date">Release date</string>
    <string name="song_uploader">Uploader</string>
    <string name="song_last_played">Last played</string>
    <string name="song_tags">Tags</string>


    <!-- == No Internet view == -->

    <string name="no_internet">Can\'t connect to LISTEN.moe\n\nCheck your Internet connection</string>
    <string name="retry">Retry</string>


    <!-- == About == -->

    <string name="about">About</string>
    <!-- e.g. Version 1.0 -->
    <string name="version">Version %s</string>
    <string name="rate">Rate on Google Play</string>
    <string name="github">Star on GitHub</string>
    <string name="translate">Help translate the app</string>
    <string name="translators">Translators</string>
    <string name="licenses">Licenses</string>
    <string name="listenmoe">LISTEN.moe radio</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="play_history">Song history</string>
    <string name="discord">Join us on Discord</string>
    <string name="patreon">Support on Patreon</string>

    <string name="translators_list" translatable="false">
        anonymousthing
        \nCalvin_c64
        \nCrawl
        \ncshih.calvin
        \ndeletescape
        \nhazexcs_jmt
        \njimimbi97
        \nKana
        \nKayo
        \nLiliace
        \nMiinc
        \nNogooduser
        \nNoobping
        \nPraxic
        \nRainBee
        \nRuslan Nurislamov
        \nsakaikazuki
        \nvzwGrey
        \nwongtszwing87
    </string>


    <!-- == Settings == -->

    <string name="settings">Settings</string>

    <string name="pref_header_general">General</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_language">Language</string>
    <string name="system_default">System default</string>
    <string name="restart_required">Changes will be applied after the app is restarted</string>
    <string name="pref_title_general_download">Auto-download images</string>
    <string name="pref_title_general_broadcast_intent">Broadcast song updates</string>
    <string name="pref_title_general_broadcast_intent_summary">Last.fm scrobbling support</string>
    <string name="pref_title_general_romaji">Prefer romaji</string>
    <string name="pref_title_general_romaji_summary">\"Nanahira\" instead of \"ななひら\"</string>
    <string name="pref_title_general_random_request_title">Show randomly requested song title</string>

    <string name="pref_header_audio">Audio</string>
    <string name="pref_title_pause_on_noisy">Pause when headphones are removed</string>
    <string name="pref_title_audio_duck">Lower volume on transient focus loss</string>
    <string name="pref_title_audio_duck_summary">Notifications, navigation, etc.</string>
    <string name="pref_title_audio_pause_on_loss">Pause on focus loss</string>
    <string name="pref_title_audio_pause_on_loss_summary">Videos, other music, etc.</string>

    <string name="pref_header_lockscreen">Lockscreen</string>
    <string name="pref_title_lockscreen_albumart">Show album cover</string>
    <string name="pref_title_lockscreen_albumart_summary">Displays album art on lockscreen and Android Auto</string>

    <string name="pref_header_color">Color</string>
    <string name="pref_title_color_now_playing">Color now playing based on album art</string>
    <string name="pref_title_color_navbar">Theme on-screen navigation bar</string>

    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_title_advanced_clear_image_cache">Clear image cache</string>

</resources>
