<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sort"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_type_title"
                    android:title="@string/sort_title" />
                <item
                    android:id="@+id/action_sort_type_artist"
                    android:title="@string/sort_artist" />
            </group>

            <item
                android:id="@+id/action_sort_desc"
                android:checkable="true"
                android:title="@string/sort_desc" />
        </menu>
    </item>

    <item
        android:id="@+id/action_random_request"
        android:title="@string/random_request"
        app:showAsAction="never" />

</menu>
