<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="me.echeung.moemoekyun.viewmodel.SongListViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/query"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/light_grey"
            android:hint="@string/filter_favorites"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="80dp"
            android:singleLine="true"
            android:text="@={vm.query}"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btn_clear_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/overflow_btn"
            android:alpha="0.5"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/clear_query"
            android:onClick="@{() -> vm.clearQuery()}"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cancel_24dp"
            android:visibility="@{vm.query != null &amp;&amp; !vm.query.isEmpty()}" />

        <ImageButton
            android:id="@+id/overflow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/sort"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_more_vert_24dp"
            android:tint="@color/light_grey" />

    </RelativeLayout>

</layout>
