<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.AuthActivity">

    <data>
        <variable name="vm" type="me.echeung.moemoekyun.viewmodels.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark_grey"
            android:elevation="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/light_grey">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/auth_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:ignore="LabelFor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/light_grey"
                android:visibility="@{vm.showRegister}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/auth_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:ignore="LabelFor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/light_grey">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/auth_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/light_grey"
                android:visibility="@{vm.showRegister}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/auth_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/light_grey"
                android:visibility="@{vm.showMfa}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/auth_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mfa_token"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:ignore="LabelFor" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/auth_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{vm.showRegister ? @string/register : @string/login}" />

        </LinearLayout>

    </LinearLayout>

</layout>
